[gd_scene load_steps=12 format=2]

[ext_resource path="res://TitilliumWeb-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Tagbutton.gd" type="Script" id=2]
[ext_resource path="res://Button.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.113725, 0.666667, 0.796078, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.870588, 0.929412, 0.933333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.529412, 0.572549, 0.603922, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.705882, 0.733333, 0.752941, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.435294, 0.47451, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
corner_detail = 16

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0.435294, 0.47451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.435294, 0.47451, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
corner_detail = 16

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.843137, 0.882353, 0.929412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.435294, 0.47451, 1 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
corner_detail = 16

[node name="Tagbutton" type="Control"]
anchor_right = 1.0
margin_bottom = 110.0
rect_min_size = Vector2( 250, 110 )
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 72 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
align = 0

[node name="VBoxContainer" type="HBoxContainer" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Tag" type="Label" parent="Button/VBoxContainer"]
unique_name_in_owner = true
margin_right = 416.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "hjgjhghghj"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Button/VBoxContainer"]
margin_left = 420.0
margin_right = 480.0
margin_bottom = 110.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="VBoxContainer" parent="Button/VBoxContainer/MarginContainer"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 105.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="STID" parent="Button/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 31.0
rect_min_size = Vector2( 50, 20 )
hint_tooltip = "Åpner tag i STID"
custom_colors/font_color = Color( 1, 0.0705882, 0.203922, 1 )
custom_colors/font_color_hover = Color( 1, 0.0705882, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 1, 0.0705882, 0.203922, 1 )
text = "STID"

[node name="Echo" parent="Button/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 35.0
margin_right = 50.0
margin_bottom = 65.0
rect_min_size = Vector2( 50, 20 )
hint_tooltip = "Åpner tag i echo"
custom_colors/font_color = Color( 1, 0.0705882, 0.203922, 1 )
custom_colors/font_color_hover = Color( 1, 0.0705882, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 1, 0.0705882, 0.203922, 1 )
text = "echo"

[node name="Hub" parent="Button/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 69.0
margin_right = 50.0
margin_bottom = 99.0
rect_min_size = Vector2( 50, 20 )
hint_tooltip = "Åpner tag i echo"
custom_colors/font_color = Color( 1, 0.0705882, 0.203922, 1 )
custom_colors/font_color_hover = Color( 1, 0.0705882, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 1, 0.0705882, 0.203922, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 12 )
text = "inField"

[connection signal="pressed" from="Button/VBoxContainer/MarginContainer/HBoxContainer/STID" to="." method="_on_STID_pressed"]
[connection signal="pressed" from="Button/VBoxContainer/MarginContainer/HBoxContainer/Echo" to="." method="_on_Echo_pressed"]
[connection signal="pressed" from="Button/VBoxContainer/MarginContainer/HBoxContainer/Hub" to="." method="_on_Hub_pressed"]
